# advent-of-code-2023

./: LICENSE  README.md
2023/11/: README.md
2023/11/haskell/: Eleven.hs
2023/11/ocaml/: README.md  solve.ml
2023/12/: Twelve.hs
2023/13/: Thirteen.hs  thirteen.cabal
2023/14/: Fourteen.hs  fourteen.cabal
2023/15/: Fifteen.hs  Fifteen2.hs  fifteen.cabal
2023/16/: sixteen.cpp
2024/01/: first.ml
2024/02/: second.ml
2024/14/: fourteen.ml
2024/15/: fifteen.ml
2024/16/: sixteen.ml
2024/18/: eighteen.ml
2024/20/: twenty.ml
2024/22/: twentytwo.ml
2024/23/: twentythree.ml
2024/24/: twentyfour.ml
