cabal-version:      2.4
name:               fifteen
version:            0.1.0.0

executable fifteen
    main-is:          Fifteen.hs
    build-depends:
        base ^>=4.17.2.0,
        split
    hs-source-dirs:   .
    default-language: Haskell2010

executable fifteen2
    main-is:          Fifteen2.hs
    build-depends:
        base ^>=4.17.2.0,
        split
    hs-source-dirs:   .
    default-language: Haskell2010
